Fix CTA buttons on mobile

--- a/src/ds-cookie-consent.scss
+++ b/src/ds-cookie-consent.scss
@@ -93,6 +93,7 @@
       @media (max-width: 560px) {
         display: block;
         margin-bottom: 15px;
+        width:100%;
       }
     }
     #btn_preferences {
